# Hydrolog

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: CHANGELOG.md  COMPUTATION_PATHS.md  DEVELOPMENT_STANDARDS.md  IMPLEMENTATION_PROMPT.md  INTEGRATION.md  NASH_AUDIT_REPORT.md  PRD.md  PROGRESS.md  SCOPE.md
examples/: 01_hydrogram_scs_cn.ipynb  02_hietogramy.ipynb  03_czas_koncentracji.ipynb  04_morfometria.ipynb  05_model_nasha.ipynb
hydrolog/: __init__.py  exceptions.py
hydrolog/cli/: __init__.py  main.py
hydrolog/hydrometrics/: __init__.py  rating_curve.py
hydrolog/morphometry/: __init__.py  geometric.py  hypsometry.py  terrain.py  watershed_params.py
hydrolog/network/: __init__.py  stream_order.py
hydrolog/precipitation/: __init__.py  hietogram.py  interpolation.py
hydrolog/reports/: __init__.py  formatters.py  generator.py  templates.py
hydrolog/runoff/: __init__.py  clark_iuh.py  cn_lookup.py  convolution.py  generator.py  nash_iuh.py  scs_cn.py  snyder_uh.py  unit_hydrograph.py
hydrolog/statistics/: __init__.py  _hydrological_year.py  _types.py  characteristic.py  high_flows.py  low_flows.py  stationarity.py
hydrolog/time/: __init__.py  concentration.py
hydrolog/visualization/: __init__.py  combined.py  hietogram.py  hydrograph.py  interpolation.py  morphometry.py  network.py  statistics.py  styles.py  unit_hydrograph.py  water_balance.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_hydrograf_integration.py
tests/unit/: __init__.py  test_characteristic.py  test_clark_iuh.py  test_cli.py  test_cn_lookup.py  test_concentration.py  test_hietogram.py  test_high_flows.py  test_interpolation.py  test_low_flows.py  test_morphometry.py  test_nash_iuh.py  test_network.py  test_rating_curve.py  test_reports.py  test_runoff.py  test_snyder_uh.py  test_stationarity.py  (+3 more)
tmp/: raport_nash_urban.md
(+16 files in other folders)
